--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -5,19 +5,19 @@
 <div th:replace="fragements.html :: main-nav"></div>
 <div class="container">
     <div class="py-5 text-center">
-        <p class="lead" th:if="${#lists.isEmpty(hobbyList)}">
-            <strong th:text="${keyword}" id="keyword" class="context"></strong>에 해당하는 Hobby가 없습니다.
+        <p class="lead" th:if="${hobbyPage.getTotalElements() == 0}">
+            <strong th:text="${keyword}" id="keyword" class="context"></strong>에 해당하는 스터디가 없습니다.
         </p>
-        <p class="lead" th:if="${!#lists.isEmpty(hobbyList)}">
-            <strong th:text="${keyword}" id="keyword" class="context"></strong>에 해당하는 Hobby를
-            <span th:text="${hobbyList.size()}"></span>개
+        <p class="lead" th:if="${hobbyPage.getTotalElements() > 0}">
+            <strong th:text="${keyword}" id="keyword" class="context"></strong>에 해당하는 스터디를
+            <span th:text="${hobbyPage.getTotalElements()}"></span>개
             찾았습니다.
         </p>
     </div>
     <div class="row justify-content-center">
         <div class="col-sm-10">
             <div class="row">
-                <div class="col-md-4" th:each="hobby: ${hobbyList}">
+                <div class="col-md-4" th:each="hobby: ${hobbyPage.getContent()}">
                     <div class="card mb-4 shadow-sm">
                         <img th:src="${hobby.image}" class="context card-img-top" th:alt="${hobby.title}" >
                         <div class="card-body">
