home page without login

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
-<html lang="en"
-      xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragements.html :: head"></head>
 <body class="bg-light">
-
 <div th:replace="fragements.html :: main-nav"></div>
-<div class="alert alert-warning" role="alert" th:if="${account != null && !account?.emailVerified}">
-    하비투게더 가입을 완료하려면 <a href="#" th:href="@{/check-email}" class="alert-link">계정 인증 이메일을 확인</a>하세요.
-</div>
-<div class="container">
-    <div class="py-5 text-center">
-        <h2>HobbyTogether</h2>
+<section class="jumbotron text-center">
+    <div class="container">
+        <h1>Hobby올래</h1>
+        <p class="lead text-muted">
+            태그와 지역 기반으로 Hobby를 찾고 참여하세요.<br/>
+            Hobby 모임 관리 기능을 제공합니다.
+        </p>
+        <p>
+            <a th:href="@{/sign-up}" class="btn btn-primary my-2">회원 가입</a>
+        </p>
     </div>
-
-    <div th:replace="fragements.html :: footer"></div>
+</section>
+<div class="container">
+    <div class="row justify-content-center pt-3">
+        <div th:replace="fragements.html :: hobby-list (hobbyList=${hobbyList})"></div>
+    </div>
 </div>
+<div th:replace="fragements.html :: footer"></div>
+<div th:replace="fragements.html :: date-time"></div>
 </body>
 </html>
