--- a/src/main/resources/templates/fragements.html
+++ b/src/main/resources/templates/fragements.html
@@ -69,6 +69,30 @@
             background-position: left bottom;
             color: #000;
         }
+        .jumbotron {
+            padding-top: 3rem;
+            padding-bottom: 3rem;
+            margin-bottom: 0;
+            background-color: #fff;
+        }
+        @media (min-width: 768px) {
+            .jumbotron {
+                padding-top: 6rem;
+                padding-bottom: 6rem;
+            }
+        }
+
+        .jumbotron p:last-child {
+            margin-bottom: 0;
+        }
+
+        .jumbotron h1 {
+            font-weight: 300;
+        }
+
+        .jumbotron .container {
+            max-width: 40rem;
+        }
     </style>
 </head>
 
@@ -492,10 +516,6 @@
     </script>
 </div>
 
-<<<<<<< HEAD
-
-=======
->>>>>>> RE - Enrollment and disenrollment
 <div th:fragment="date-time">
     <script src="/node_modules/moment/min/moment-with-locales.min.js"></script>
     <script type="application/javascript">
@@ -642,4 +662,42 @@
         <p th:text="${noti.message}" class="text-left mb-0 mt-1">message</p>
     </a>
 </ul>
+
+<div th:fragment="hobby-list (hobbyList)" class="col-sm-10">
+    <div class="row">
+        <div class="col-md-4" th:each="hobby: ${hobbyList}">
+            <div class="card mb-4 shadow-sm">
+                <img th:src="${hobby.image}" class="card-img-top" th:alt="${hobby.title}" >
+                <div class="card-body">
+                    <a th:href="@{'/hobby/' + ${hobby.path}}" class="text-decoration-none">
+                        <h5 class="card-title context" th:text="${hobby.title}"></h5>
+                    </a>
+                    <p class="card-text" th:text="${hobby.shortDescription}">Short description</p>
+                    <p class="card-text context">
+                                <span th:each="tag: ${hobby.tags}" class="font-weight-light text-monospace badge badge-pill badge-info mr-3">
+                                    <a th:href="@{'/search/tag/' + ${tag.title}}" class="text-decoration-none text-white">
+                                        <i class="fa fa-tag"></i> <span th:text="${tag.title}">Tag</span>
+                                    </a>
+                                </span>
+                        <span th:each="zone: ${hobby.zones}" class="font-weight-light text-monospace badge badge-primary mr-3">
+                                    <a th:href="@{'/search/zone/' + ${zone.id}}" class="text-decoration-none text-white">
+                                        <i class="fa fa-globe"></i> <span th:text="${zone.localNameOfCity}" class="text-white">City</span>
+                                    </a>
+                                </span>
+                    </p>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <small class="text-muted">
+                            <i class="fa fa-user-circle"></i>
+                            <span th:text="${hobby.memberCount}"></span>명
+                        </small>
+                        <small class="text-muted date" th:text="${hobby.publishedDateTime}">9 mins</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 </html>
+
+
