--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -6,10 +6,10 @@
 <div class="container">
     <div class="py-5 text-center">
         <p class="lead" th:if="${hobbyPage.getTotalElements() == 0}">
-            <strong th:text="${keyword}" id="keyword" class="context"></strong>에 해당하는 스터디가 없습니다.
+            <strong th:text="${keyword}" id="keyword" class="context"></strong>에 해당하는 Hobby가 없습니다.
         </p>
         <p class="lead" th:if="${hobbyPage.getTotalElements() > 0}">
-            <strong th:text="${keyword}" id="keyword" class="context"></strong>에 해당하는 스터디를
+            <strong th:text="${keyword}" id="keyword" class="context"></strong>에 해당하는 Hobby를
             <span th:text="${hobbyPage.getTotalElements()}"></span>개
             찾았습니다.
         </p>
@@ -21,7 +21,7 @@
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 <a class="dropdown-item" th:classappend="${#strings.equals(sortProperty, 'publishedDateTime')}? active"
                    th:href="@{'/search/hobby?sort=publishedDateTime,desc&keyword=' + ${keyword}}">
-                    스터디 공개일
+                    Hobby 공개일
                 </a>
                 <a class="dropdown-item" th:classappend="${#strings.equals(sortProperty, 'memberCount')}? active"
                    th:href="@{'/search/hobby?sort=memberCount,desc&keyword=' + ${keyword}}">
@@ -61,7 +61,7 @@
                             <div class="d-flex justify-content-between align-items-center">
                                 <small class="text-muted">
                                     <i class="fa fa-user-circle"></i>
-                                    <span th:text="${hobby.members.size()}"></span>명
+                                    <span th:text="${hobby.memberCount}"></span>명
                                 </small>
                                 <small class="text-muted date" th:text="${hobby.publishedDateTime}">9 mins</small>
                             </div>
@@ -72,29 +72,7 @@
         </div>
     </div>
     <div class="row justify-content-center">
-        <div class="col-sm-10">
-            <nav>
-                <ul class="pagination justify-content-center">
-                    <li class="page-item" th:classappend="${!hobbyPage.hasPrevious()}? disabled">
-                        <a th:href="@{'/search/hobby?keyword=' + ${keyword} + '&sort=' + ${sortProperty} + ',desc&page=' + ${hobbyPage.getNumber() - 1}}"
-                           class="page-link" tabindex="-1" aria-disabled="true">
-                            Previous
-                        </a>
-                    </li>
-                    <li class="page-item" th:classappend="${i == hobbyPage.getNumber()}? active"
-                        th:each="i: ${#numbers.sequence(0, hobbyPage.getTotalPages() - 1)}">
-                        <a th:href="@{'/search/hobby?keyword=' + ${keyword} + '&sort=' + ${sortProperty} + ',desc&page=' + ${i}}"
-                           class="page-link" href="#" th:text="${i + 1}">1</a>
-                    </li>
-                    <li class="page-item" th:classappend="${!hobbyPage.hasNext()}? disabled">
-                        <a th:href="@{'/search/hobby?keyword=' + ${keyword} + '&sort=' + ${sortProperty} + ',desc&page=' + ${hobbyPage.getNumber() + 1}}"
-                           class="page-link">
-                            Next
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
+        <div th:replace="fragements.html :: hobby-list (hobbyList=${hobbyPage.getContent()})"></div>
     </div>
 </div>d
 <div th:replace="fragements.html :: footer"></div>
