--- a/src/main/resources/templates/index-after-login.html
+++ b/src/main/resources/templates/index-after-login.html
@@ -4,7 +4,7 @@
 <body class="bg-light">
 <div th:replace="fragements.html :: main-nav"></div>
 <div class="alert alert-warning" role="alert" th:if="${account != null && !account?.emailVerified}">
-    hobby올레 가입을 완료하려면 <a href="#" th:href="@{/check-email(email=${account.email})}" class="alert-link">계정 인증 이메일을 확인</a>하세요.
+    HobbyTogether 가입을 완료하려면 <a href="#" th:href="@{/check-email(email=${account.email})}" class="alert-link">계정 인증 이메일을 확인</a>하세요.
 </div>
 <div class="container mt-4">
     <div class="row">
