--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
 <div th:replace="fragements.html :: main-nav"></div>
 <section class="jumbotron text-center">
     <div class="container">
-        <h1>Hobby올래</h1>
+        <h1>HobbyTogether</h1>
         <p class="lead text-muted">
             태그와 지역 기반으로 Hobby를 찾고 참여하세요.<br/>
             Hobby 모임 관리 기능을 제공합니다.
